--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
     <head>
         <body>
             <a href="jcb.html">정신 차리세요, 교수님!</a>
-            <a href="ddong.html">똥먹기 프로젝트</a>
+            <br><a href="ddong.html">똥먹기 프로젝트</a>
         </body>
     </head>
 </html>
