--- a/main.html
+++ b/main.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head>용가리툰</head>
         <body>
             <a href="jcb.html">정신 차리세요, 교수님!</a>
-            <br><a href="ddong.html">똥먹기 프로젝트</a>
+            <a href="ddong.html">똥먹기 프로젝트</a>
         </body>
-    </head>
 </html>
