--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
     <head>용가리툰</head>
         <body>
-            <a href="jcb.html" type="button">정신 차리세요, 교수님!</a>
+            <a href="jcb.html">정신 차리세요, 교수님!</a>
             <a href="ddong.html">똥먹기 프로젝트</a>
         </body>
 </html>
