--- a/main.html
+++ b/main.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>용가리툰</head>
+    <head>
+        <meta charset="UTF-8">
+            <title>용가리툰</title>
+    </head>
         <body>
             <a href="jcb.html">정신 차리세요, 교수님!</a>
             <br>
