--- a/jcb_ep2.html
+++ b/jcb_ep2.html
@@ -1,5 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <alert>준비중입니다.</alert></head>
+    <meta charset="UTF-8">
+    <title>정신을 차리시길 바랍니다. - 2화</title>
+    <style>
+      img {
+        width: 100%;
+        max-width: 600px;
+        display: block;
+        margin: 0 auto;
+      }
+      .nav {
+        display: flex;
+        justify-content: space-between;
+        margin: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>정신을 차리시길 바랍니다. - 2화</h1>
+    <img src="jcb(2).jpg" alt="2화 이미지">
+
+    <div class="nav">
+      <a href="jcb_ep1.html">← 이전 화</a>
+      <a href="jcb_ep3.html">다음 화 →</a>
+    </div>
+
+    <a href="jcb.html">목록으로 돌아가기</a>
+  </body>
 </html>
