--- a/jcb_ep1.html
+++ b/jcb_ep1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>정신 차리세요, 교수님! - 1화</title>
+    <title>정신을 차리시길 바랍니다. - 1화</title>
     <style>
       img {
         width: 100%;
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <h1>정신 차리세요, 교수님! - 1화</h1>
+    <h1>정신을 차리시길 바랍니다. - 1화</h1>
     <img src="jcb(1).jpg" alt="1화 이미지">
 
     <div class="nav">
