--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
     </head>
         <body>
-            <a href="jcb.html">정신 차리세요, 교수님!</a>
+            <a href="jcb.html">정신을 차리시길 바랍니다.</a>
             <br>
             <a href="ddong.html">똥먹기 프로젝트</a>
         </body>
